<?xml version="1.0"?>
<package format="3">
  <name>uncertainty_tools</name>
  <version>1.3.0</version>
  <description>The uncertainty_tools contains useful functions for dealing with uncertainty in calculations </description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache License 2.0</license>
  <author email="carma@todo.todo">carma</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
</package>
