<?xml version="1.0"?>
<package format="3">
  <name>uncertainty_tools</name>
  <version>1.3.0</version>
  <description>The uncertainty_tools contains useful functions for dealing with uncertainty in calculations </description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache License 2.0</license>
  <author email="carma@todo.todo">carma</author>
   <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
   <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
