<?xml version="1.0"?>
<package format = "3">
  <name>wgs84_utils</name>
  <version>1.3.0</version>
  <description>The wgs84_utils package</description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>BSD</license>
  <author email="watters@torcrobotics.com">Thomas Watters</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend version_gte="0.5.16">tf2_geometry_msgs</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
