<?xml version="1.0"?>
<package format = "3">
  <name>wgs84_utils</name>
  <version>1.3.0</version>
  <description>The wgs84_utils package</description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>BSD</license>
  <author email="watters@torcrobotics.com">Thomas Watters</author>

  <buildtool_depend condition="$ROS_VERSION==1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend version_gte="0.5.16">tf2_geometry_msgs</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
